String source better organized, code refactored.

--- a/Front-end/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Front-end/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,52 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="welcome_str">欢迎使用Quizzical</string>
+    <string name="UI_welcome_str">欢迎使用Quizzical</string>
     <string name="UI_username">用户名</string>
-    <string name="error_generating_quiz_page">无法加载此题，请按下一题继续</string>
-    <string name="Next">下一题</string>
-    <string name="error_loading_pic">无法加载图片</string>
-    <string name="quiz_pic_hint">请下滑查看图片</string>
-    <string name="SUBMIT">提交</string>
-    <string name="FINISH">完成</string>
-    <string name="No_answer_response">提交前请先选择或输入答案</string>
-    <string name="Quizzes">测试</string>
-    <string name="Class_Statistics">班级数据</string>
-    <string name="LeaderBoard">排行榜</string>
-    <string name="Profile">个人资料</string>
-    <string name="server_get_failed">服务器链接失败</string>
-    <string name="question">题目</string>
+    <string name="UI_error_generating_quiz_page_msg">无法加载此题，请按下一题继续</string>
+    <string name="UI_next">下一题</string>
+    <string name="UI_error_loading_pic_msg">无法加载图片</string>
+    <string name="UI_quiz_pic_msg">请下滑查看图片</string>
+    <string name="UI_submit">提交</string>
+    <string name="UI_finish">完成</string>
+    <string name="UI_no_answer_response_msg">提交前请先选择或输入答案</string>
+    <string name="UI_quizzes">测试</string>
+    <string name="UI_class_statistics">班级数据</string>
+    <string name="UI_leader_board">排行榜</string>
+    <string name="UI_profile">个人资料</string>
+    <string name="UI_server_failure_msg">服务器链接失败</string>
+    <string name="UI_question">题目</string>
     <string name="UI_is_instructor_msg">老师？</string>
     <string name="test">测试功能</string>
-    <string name="log_out">退出登录</string>
-    <string name="finish_quiz_text">你完成了这次测试！</string>
-    <string name="back_to_main_menu">回到主界面</string>
+    <string name="UI_log_out">退出登录</string>
+    <string name="UI_finish_quiz_msg">你完成了这次测试！</string>
+    <string name="UI_back_to_main_menu">回到主界面</string>
     <string name="go_to_quiz">前往测试</string>
     <string name="take_picture">拍照</string>
     <string name="preview">预览</string>
-    <string name="rotate">旋转90°</string>
-    <string name="crop">修剪</string>
+    <string name="UI_rotate">旋转90°</string>
+    <string name="UI_crop">修剪</string>
     <string name="NO">否</string>
     <string name="YES">是</string>
-    <string name="modify_image_hint">你想要修剪或旋转图片吗？</string>
-    <string name="modify_image">修整图片</string>
+    <string name="UI_modify_image_msg">你想要修剪或旋转图片吗？</string>
+    <string name="UI_modify_image_title">修整图片</string>
     <string name="Continue_text">继续</string>
-    <string name="Change_Profile_Image_msg">你想要换一张头像吗？</string>
+    <string name="UI_change_profile_image_msg">你想要换一张头像吗？</string>
     <string name="UI_username_msg">请输入用户名</string>
     <string name="UI_email_msg">请输入邮箱地址</string>
-    <string name="Please_enter_email">请输入有效邮箱地址</string>
+    <string name="UI_prompt_for_valid_email">请输入有效邮箱地址</string>
     <string name="UI_email_invalid_msg">邮箱地址无效</string>
     <string name="UI_username_invalid_msg">用户名无效。仅支持3-15英文字符，0-9，下划线</string>
     <string name="MATH">数学</string>
     <string name="ENGLISH">英语</string>
     <string name="QUANTUM_PHYSICS">量子物理</string>
-    <string name="enter_class_code_hint">请输入老师提供的课程代码</string>
-    <string name="select_course_category_hint">请选择课程类型</string>
-    <string name="invalid_class_code">课程代码无效</string>
-    <string name="change_username">更改用户名</string>
-    <string name="You_have_joined_the_class">您已在这门课程中</string>
-    <string name="quiz_finished_low_score_msg">%d/%d正确，继续努力！</string>
-    <string name="quiz_finished_full_score_msg">%d/%d正确，恭喜！</string>
-    <string name="quiz_finished_normal_score_msg">%d/%d正确，干得好！</string>
-    <string name="create_class_success_msg">你成功创立了一个课程。</string>
-    <string name="create_class_success_msg_details">您的新课程代码是：%d。请查看Email获取详细信息，并将此代码分享给您的学生。</string>
+    <string name="UI_enter_class_code_msg">请输入老师提供的课程代码</string>
+    <string name="UI_select_course_category_msg">请选择课程类型</string>
+    <string name="UI_invalid_class_code_msg">课程代码无效</string>
+    <string name="UI_change_username">更改用户名</string>
+    <string name="UI_class_joined_already_msg">您已在这门课程中</string>
+    <string name="UI_quiz_finished_low_score_msg">%d/%d正确，继续努力！</string>
+    <string name="UI_quiz_finished_full_score_msg">%d/%d正确，恭喜！</string>
+    <string name="UI_quiz_finished_normal_score_msg">%d/%d正确，干得好！</string>
+    <string name="UI_create_class_success_title">你成功创立了一个课程。</string>
+    <string name="UI_create_class_success_msg">您的新课程代码是：%d。请查看Email获取详细信息，并将此代码分享给您的学生。</string>
+    <string name="UI_change_email">更改Email</string>
 </resources>
