--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -10,11 +10,13 @@
     <string name="Continue_text">Continue</string>
 
     <!--    set an untranslatable version of username for server communication-->
-    <string name="USER_CREDENTIAL" translatable="false">user credential</string>
+    <string name="USER_INFO" translatable="false">user info</string>
     <string name="UID" translatable="false">user id</string>
     <string name="USERNAME" translatable="false">username</string>
     <string name="EMAIL" translatable="false">Email</string>
     <string name="PROFILE_IMG" translatable="false">Profile Image</string>
+    <string name="EXP" translatable="false">EXP</string>
+    <string name="USER_QUIZ_COUNT" translatable="false">user quiz count</string>
 
     <string name="TRUE" translatable="false">True</string>
     <string name="FALSE" translatable="false">False</string>
@@ -116,6 +118,12 @@
     <string name="UI_change_profile_image_msg">Do you want to change the profile image?</string>
     <string name="UI_change_username">change username</string>
     <string name="UI_change_email">change email</string>
+    <string name="UI_statistics">Statistics</string>
+    <string name="UI_quiz_taken">Quiz taken: %d</string>
+    <string name="UI_quiz_made">Quiz made: %d</string>
+    <string name="UI_total_exp">Total EXP: %d</string>
+    <string name="UI_course_taken">Course taken:</string>
+    <string name="UI_course_created">Course created:</string>
     <string name="UI_log_out">Log out</string>
 
     <!--    used in quiz activity-->
@@ -135,8 +143,10 @@
     <string name="total_num" translatable="false">Total_Num</string>
     <string name="wrong_question_ids" translatable="false">Wrong question ids</string>
     <string name="quiz_result" translatable="false">Quiz %d result</string>
+    <string name="EXP_earned_for_quiz" translatable="false">EXP earned</string>
 
     <!--    used in quiz finish activity-->
+    <string name="UI_quiz_finished_earned_exp_msg">You got %d EXP!</string>
     <string name="UI_quiz_finished_low_score_msg">You got %d/%d correct. Keep learning!</string>
     <string name="UI_quiz_finished_full_score_msg">You got %d/%d correct. Congratulations!</string>
     <string name="UI_quiz_finished_normal_score_msg">You got %d/%d correct. Great work!</string>
