Basic tests set up

--- a/Front-end/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Front-end/app/src/main/res/values-zh-rCN/strings.xml
@@ -77,4 +77,5 @@
     <string name="UI_quiz_made">创建测试：%d</string>
     <string name="UI_course_created">您的课程：</string>
     <string name="UI_quiz_finished_earned_exp_msg">您获得了%dEXP！</string>
+    <string name="UI_require_valid_username_email_msg">请输入有效用户名及邮箱</string>
 </resources>
