--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="UI_username">Username</string>
     <string name="UI_username_msg">Please enter a user name</string>
     <string name="UI_example_username" translatable="false">E.g. Valhalla</string>
-    <string name="UI_username_invalid_msg">Username invalid: 3–15 characters with a–z,A-Z,0-9 and _ allowed.</string>
+    <string name="UI_username_invalid_msg">Username invalid: 3-15 characters with a-z,A-Z,0-9 and _ allowed.</string>
 
     <string name="UI_email_msg">Please enter your email address</string>
     <string name="UI_example_email" translatable="false">E.g. abc@example.com</string>
