--- a/Front-end/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Front-end/app/src/main/res/values-zh-rCN/strings.xml
@@ -90,4 +90,5 @@
     <string name="UI_leaderboard_score">分数</string>
     <string name="UI_back_to_statistics">返回班级数据</string>
     <string name="UI_default_module_text">第一单元</string>
+    <string name="UI_current_class_name">当前班级：%s</string>
 </resources>
