--- a/Front-end/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Front-end/app/src/main/res/values-zh-rCN/strings.xml
@@ -91,4 +91,7 @@
     <string name="UI_back_to_statistics">返回班级数据</string>
     <string name="UI_default_module_text">第一单元</string>
     <string name="UI_current_class_name">当前班级：%s</string>
+    <string name="UI_warning">警告</string>
+    <string name="UI_teacher_delete_course">您的课程将会同时在所有学生处删除，是否继续？</string>
+    <string name="UI_student_delete_course">您希望退出这门课吗？</string>
 </resources>
