--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
 
     <string name="QUIZ" translatable="false">quiz</string>
     <string name="QUIZ_CODE" translatable="false">quiz_code</string>
+    <string name="QUIZ_MODULES" translatable="false">quiz_modules</string>
     <string name="QUESTION_NUM" translatable="false">question_num</string>
     <string name="QUIZ_URL" translatable="false">QUIZ_URL</string>
 
@@ -129,6 +130,20 @@
     <string name="quiz_fragment_debug_text" translatable="false">This is the quiz page</string>
     <string name="teacher_quiz_fragment_debug_text" translatable="false">This is the quiz page for teachers</string>
     <string name="UI_default_module_text">module 1</string>
+    <string name="UI_wrong_questions">Wrong Questions</string>
+    <string name="UI_stats">stats</string>
+    <string name="UI_notes">notes</string>
+    <string name="UI_stats_string">Avg: %.2f, highest: %.2f, your score: %.2f</string>
+
+    <string name="UI_create_new_module">Create new module</string>
+    <string name="UI_enter_module_name">Please enter module name</string>
+    <string name="UI_example_module_name" translatable="false">E.g module 1</string>
+    <string name="UI_invalid_module_name">Invalid module name</string>
+
+    <string name="AVERAGE" translatable="false">Average</string>
+    <string name="HIGHEST" translatable="false">Highest</string>
+    <string name="SCORE" translatable="false">Score</string>
+
 
     <!--    used in class statistic fragment (for teachers)-->
     <!--    need update later-->
