--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -147,8 +147,13 @@
     <string name="HIGHEST" translatable="false">Highest</string>
     <string name="SCORE" translatable="false">Score</string>
 
+    <string name="UI_create_module_notification">Please create a module before creating a quiz</string>
     <string name="UI_correct_answer">correct answer</string>
-
+    <string name="UI_no_correct_answer">Question %d is a multiple choice question, but has no correct answer.</string>
+    <string name="UI_create_quiz_success_msg">Congratulations! You have just created a quiz.</string>
+    <string name="UI_enter_answer">Enter answer</string>
+    <string name="UI_example_answer" translatable="false">E.g. 2</string>
+    <string name="UI_picture">Picture</string>
 
     <!--    used in class statistic fragment (for teachers)-->
     <!--    need update later-->
