--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -122,7 +122,6 @@
     <string name="UI_create_class_success_title">You just created a new class</string>
     <string name="UI_create_class_success_msg">Your new class code is %d. You will also get an email containing the code. Please share it with your students.</string>
 
-
     <string name="UI_warning">Warning</string>
     <string name="UI_teacher_delete_course">Do you want to delete this course for everyone?</string>
     <string name="UI_student_delete_course">Do you want to quit this course?</string>
@@ -152,8 +151,13 @@
     <string name="UI_no_correct_answer">Question %d is a multiple choice question, but has no correct answer.</string>
     <string name="UI_create_quiz_success_msg">Congratulations! You have just created a quiz.</string>
     <string name="UI_enter_answer">Enter answer</string>
+    <string name="UI_example_question" translatable="false">E.g. 1+1=?</string>
     <string name="UI_example_answer" translatable="false">E.g. 2</string>
     <string name="UI_picture">Picture</string>
+    <string name="UI_has_pic">has pic</string>
+    <string name="UI_too_many_choices">Too many choices. Max of %d supported.</string>
+    <string name="UI_add_question">Add question</string>
+    <string name="UI_too_many_questions">Too many questions. Maximum of %d supported.</string>
 
     <!--    used in class statistic fragment (for teachers)-->
     <!--    need update later-->
