--- a/Front-end/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Front-end/app/src/main/res/values-zh-rCN/strings.xml
@@ -111,4 +111,8 @@
     <string name="UI_too_many_choices">选项过多。最多支持%d个选项。</string>
     <string name="UI_add_question">" 添加问题"</string>
     <string name="UI_too_many_questions">题目过多。最多支持%d个选项。</string>
+    <string name="UI_create_answer">添加答案</string>
+    <string name="UI_delete">删除</string>
+    <string name="UI_no_question">第%d题没有题目。</string>
+    <string name="UI_too_few_choices">第%d题选项不足2个。</string>
 </resources>
